try dinamic endpoint

--- a/web/views/movies.ejs
+++ b/web/views/movies.ejs
@@ -7,10 +7,12 @@
     <title>Netflix</title>
   </head>
   <body class="page">
-    <li className="card">
-      <img className="card__img" src= alt= />
-      <h3 className="card__title"></h3>
-      <p className="card__description"></p>
-    </li>
+    <ul>
+      <li className="card">
+        <img className="card__img" src="<%" ="movie.image" % />" alt= />
+        <h3 className="card__title"><%= movie.name %></h3>
+        <p className="card__description"></p>
+      </li>
+    </ul>
   </body>
 </html>
