--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -3,14 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/icono_netflix_nuevo.jpg" />
+    <link
+      rel="stylesheet"
+      href="//beta.adalab.es/resources/stylesheets/all.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Netflix</title>
   </head>
   <body class="page">
     <ul>
       <li className="card">
-        <img className="card__img" src="<%" ="movie.image" % />" alt= />
-        <h3 className="card__title"><%= movie.name %></h3>
+        <img className="card__img" src="<%= image %>" alt= />
+        <h3 className="card__title"><%= title %></h3>
         <p className="card__description"></p>
       </li>
     </ul>
