try static server styles

--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -13,9 +13,9 @@
   <body class="page">
     <ul>
       <li className="card">
-        <img className="card__img" src="<%= image %>" alt= />
+        <img className="card__img" src="<%= image %>" width="300px" />
         <h3 className="card__title"><%= title %></h3>
-        <p className="card__description"></p>
+        <p className="card__description"><%= description %></p>
       </li>
     </ul>
   </body>
